# nn

./: .gitignore  CMakeLists.txt  README.md  nn.cu  nn.hh  shell.nix  test.cu
