#cmake_minimum_required(VERSION 3.29)
project(nn LANGUAGES CXX CUDA)

if(NOT CMAKE_BUILD_TYPE)
	set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CUDA_STANDARD ${CMAKE_CXX_STANDARD})
set(CMAKE_CUDA_STANDARD_REQUIRED ${CMAKE_CXX_STANDARD_REQUIRED})
set(CMAKE_CUDA_EXTENSIONS ${CMAKE_CXX_EXTENSIONS})

list(APPEND TEST_COMPILE_OPTIONS -Xptxas=-v)
#list(APPEND TEST_COMPILE_OPTIONS -maxrregcount 128)
list(APPEND TEST_COMPILE_OPTIONS -gencode arch=compute_86,code=sm_86)

add_executable(test test.cu)
target_compile_options(test PUBLIC $<$<COMPILE_LANGUAGE:CUDA>:${TEST_COMPILE_OPTIONS}>)
